# Canopy

./: .gitignore  README.md  chromium.version  index.html  newtab.html  package.json  playwright.config.cjs  pnpm-lock.yaml  vite.config.mjs
e2e/: canopy.electron.spec.cjs
electron/: game-files.cjs  main.cjs  navigation.cjs  preload.cjs  store.cjs
extension/: background-v3.js  background.js  core.js  gestures.js  manifest.json  newtab.css  newtab.html  newtab.js  page-actions.js  sidepanel.css  sidepanel.html  sidepanel.js
native/: cef-project.commit  sparkle.sha256
native/cef/: CMakeLists.txt  Info.plist.in  LICENSE.txt  app_browser_canopy.cc  browser_client.cc  browser_client.h  canopy_window.cc  canopy_window.h  main_canopy.cc  updater_bridge.h  updater_bridge.mm
native/cef/resources/: Canopy.icns  sidebar.css  sidebar.html  sidebar.js
scripts/: build-mac-app.sh  build-native-cef.sh  download-chromium.sh  download-sparkle.sh  package-native-update.sh  prepare-profile.sh  run-canopy.sh  run-native-cef.sh  sign-native-app.sh  stage-jims-client.sh  validate-extension.mjs
src/: App.jsx  newtab.css  styles.css
tests/: chromium-runtime.test.cjs  core.test.cjs  game-files.test.cjs  native-cef-source.test.cjs  navigation.test.cjs  security-shell.test.cjs  store.test.cjs
updates/: appcast.xml
